--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
                 <form id="js-form">
                     <label for="search-term">Search</label>
-                    <input type="text" name="search-term" id="js-search-term" placeholder="Thyme" required>
+                    <input type="text" name="search-term" id="js-search-term" required>
         
                     <input type="submit" value="Go!">
                 </form>
